tests/toy/neg/001674_mutation.toylang
program a = { while a while sleep; } .
